Fix broken layout when zoomed in 2.0

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -42,25 +42,26 @@
     height: 100%;
     overflow: visible;
     margin-left: 3%;
-    margin-right: 2%;
+    margin-right: 3%;
 }
 
 #name_container {
     position: relative;
+    container-type: size;
     width: 100%;
 }
 
 #name {
+    font-size: 7cqw;
     top: 10%;
     display: inline;
-    font-size: 200%;
     font-family: Motiva Sans, sans-serif;
 }
 
 #country_container {
     display: flex;
     align-items: center;
-    width: fit-content;
+    container-type: inline-size;
     padding-top: 1%;
 }
 
@@ -69,43 +70,50 @@
 }
 
 #country {
-    margin: 0 0 0 5%;
+    margin: 0 0 0 1%;
     padding: 0;
+    font-size: 4cqw;
 }
 
 #description {
-    margin-top: 5%;
+    container-type: size;
+    padding-top: 1%;
+}
+
+.description-text {
+    font-size: 4cqw;
 }
 
 #age_container {
     display: flex;
-    width: fit-content;
     align-items: center;
+    container-type: inline-size;
 }
 
 #age {
-    font-size: 170%;
+    font-size: 12cqw;
     font-family: Motiva Sans, sans-serif;
     margin: 0;
 }
 
 #age_num {
-    padding: 6.5%;
+    padding: 2%;
     border-radius: 50%;
     border-color: rgb(192, 41, 66);
     border-style: solid;
-    font-size: 125%;
+    font-size: 9.5cqw;
     font-family: Motiva Sans, sans-serif;
-    margin: 0 0 0 10%;
+    margin: 0 0 0 2%;
 }
 
 #mg_container {
     display: block;
-    margin-top: 2%;
+    container-type: inline-size;
+    margin-top: 4%;
 }
 
 .header_button {
-    font-size: 100%;
+    font-size: 7cqw;
     background-color: rgba(0, 0, 0, 0.2);
     border: none;
     padding: 3.5%;
@@ -128,9 +136,9 @@
 
 #badge_container {
     background-color: rgba(0, 0, 0, 0.2);
-    margin-top: 2%;
+    margin-top: 8%;
     border-radius: 6px;
-    padding: 4%;
+    padding: 5%;
 }
 
 #badge_img {
@@ -138,19 +146,21 @@
 }
 
 #badge_text_container {
+    container-type: inline-size;
     margin-left: 25%;
     width: 50%;
     height: 100%;
 }
 
 .badge_text {
+    font-size: 15.5cqw;
     margin: 0;
     padding: 2.5%;
 }
 
 #levelbadge {
-    float: left;
-    width: 32%;
+    margin-left: 5%;
+    width: 27%;
 }
 
 #m_description {
