--- a/src/css/projectshowcase.css
+++ b/src/css/projectshowcase.css
@@ -72,9 +72,7 @@
 
 .showcase_body_container {
     display: flex;
-    margin-top: 2.5%;
-    margin-bottom: 1%;
-    margin-left: 1%;
+    margin: 2.5% 0 1% 1%;
 }
 
 .title_container {
